--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^11.0.0",
     "next": "14.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "resend": "^3.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
